# memolite

./: .gitignore  BUILD_PLAN_FINAL_PATCH.md  Cargo.toml  README.md  memolite.db
Changelogs/: 13july.md  16thjuly.md  17thjuly.md  18thjuly.md  19thjuly.md  8thjuly.md  9thjuly.md
Docs/: Inception.md  V1architechture.md  V2architecture.md  V3architecture.md  V4architecture.md  V5architecture.md  V6final_architeture_build_plan.md  final_product_features.md  finalunderstanding.md  milestone3pla.md  step0.md  tobedone.md
examples/: Embedding_similarity_probe.rs  basic.rs  embed_test.rs  streaming_ingest.rs
src/: compression.rs  confidence.rs  embedder.rs  engine.rs  error.rs  lib.rs  maintenance.rs  memory.rs  migrations.rs  ranking.rs  recall.rs  requests.rs  stats.rs  streaming.rs
src/vector_store/: in_memory.rs  mod.rs
tests/: 9_5_tests.rs  compression_test.rs  confidence_test.rs  corruption_test.rs  cosine_test.rs  crud_test.rs  forget_test.rs  migration_test.rs  module_test.rs  orphan_test.rs  purge_test.rs  recall_test.rs  restart_test.rs  send_sync.rs  streaming_test.rs
tests/common/: mod.rs
unnecessary/: engine.rsm6.rs
